src/templates/items-list/items-style/fade/style.scss
/**
 * Fade items style
 */
.vp-portfolio__items-style-fade {
    .vp-portfolio__item a {
        outline: none;
        box-shadow: none;
    }

    .vp-portfolio__item-overlay {
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        padding: 20px;
        color: #fff;
        text-decoration: none;
        background-color: rgba(0, 0, 0, .85);
        opacity: 0;
        transition: opacity 1s cubic-bezier(.07, .72, .24, 1);
        will-change: opacity;
    }

    // meta
    .vp-portfolio__item-meta {
        position: relative;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        align-items: center;
        justify-content: center;
        width: 100%;
        height: 100%;
        text-align: center;
        transition: transform 1s cubic-bezier(.07, .72, .24, 1), opacity 1s cubic-bezier(.07, .72, .24, 1);
        transform: scale(.8);
        will-change: transform, opacity;

        * + * {
            margin-top: 4px;
        }
    }
    .vp-portfolio__item-meta-title {
        margin-bottom: 0;
        font-size: 1.3em;
        color: inherit;
    }
    .vp-portfolio__item-meta-date {
        font-size: .85em;
    }
    .vp-portfolio__item-meta-icon {
        font-size: 2em;

        + * {
            margin-top: 15px;
        }
    }
    .vp-portfolio__item-meta-categories {
        position: absolute;
        display: flex;
        flex-wrap: wrap;
        bottom: 0;
        left: 0;
        padding: 0;
        margin: 0 -5px;
        list-style-type: none;

        .vp-portfolio__item-meta-category {
            display: block;
            padding: 4px 15px;
            margin: 0 5px;
            color: #fff;
            background-color: #3c3c3c;
        }
    }
    .vp-portfolio__item-meta-excerpt {
        opacity: .8;
    }

    // Transitions
    .vp-portfolio__item-img img {
        transition: transform 2s cubic-bezier(.08, .43, .24, 1);
        will-change: transform;
    }
    & .vp-portfolio__item:hover {
        .vp-portfolio__item-overlay {
            opacity: 1;
        }
        .vp-portfolio__item-meta {
            transform: scale(1);
        }
        .vp-portfolio__item-img img {
            transform: scale(1.1);
        }
    }

    // align
    .vp-portfolio__item-align-left .vp-portfolio__item-meta {
        align-items: flex-start;
        text-align: left;
    }
    .vp-portfolio__item-align-right .vp-portfolio__item-meta {
        align-items: flex-end;
        text-align: right;
    }

    .vp-portfolio__item-align-top-center .vp-portfolio__item-meta {
        align-items: center;
        justify-content: flex-start;
        text-align: center;
    }
    .vp-portfolio__item-align-top-left .vp-portfolio__item-meta {
        align-items: flex-start;
        justify-content: flex-start;
        text-align: left;
    }
    .vp-portfolio__item-align-top-right .vp-portfolio__item-meta {
        align-items: flex-end;
        justify-content: flex-start;
        text-align: right;
    }

    .vp-portfolio__item-align-bottom-center .vp-portfolio__item-meta {
        align-items: center;
        justify-content: flex-end;
        text-align: center;
    }
    .vp-portfolio__item-align-bottom-left .vp-portfolio__item-meta {
        align-items: flex-start;
        justify-content: flex-end;
        text-align: left;
    }
    .vp-portfolio__item-align-bottom-right .vp-portfolio__item-meta {
        align-items: flex-end;
        justify-content: flex-end;
        text-align: right;
    }
}

